<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">E-Wallet</string>
    <string name="next">Next</string>
    <string name="definitely_safe">Definitely Safe</string>
    <string name="best_service">Best Services</string>
    <string name="easy_deposit">Easy Deposit</string>
    <string name="dream_deals">Dream Deals</string>
    <string name="definitely_safe_text">Look for things around you</string>
    <string name="best_service_text"><![CDATA[Get the best deals & Coupons]]></string>
    <string name="easy_deposit_text">Find great offers while you discover</string>
    <string name="dream_deals_text"><![CDATA[Free recharge coupons & more]]></string>
    <string name="get_started">Get Started</string>
    <string name="register">REGISTER</string>

    <!--                  Sign up gage-->
    <string name="title">Enter your phone number</string>
    <string name="subtitle">The quick, brown fox jumps over a lazy dog. Djs flock by</string>
    <string name="input">Enter your phone number</string>
    <string name="error"> * Please input your phone number</string>
    <string name="term_condition">I have read and agree to the </string>

    <!--  verify page-->
    <string name="v_title">Enter verification code</string>
    <string name="limit_time_text">Send code again (24)</string>
    <string name="chnage_phone_text">Change phone number</string>
    <string name="time_alert">Did not you receive verification code ?</string>
    <string name="call">CALL</string>
    <string name="close">CLOSE</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="sub_call">We call 1234567890 to read your verification code</string>
    <string name="success">verification code sent successfully</string>
    <string name="input_your_password">Your password</string>
    <string name="input_re_enter_password">Re-enter password</string>
    <string name="enter">ENTER</string>
    <string name="create_password">Create a password</string>
    <string name="incorrect_password">Password does not match, please enter again.</string>
    <string name="personal_info">Personal Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="welcome">Welcome</string>
    <string name="alex">Alex</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">LOGIN</string>
    <string name="login_with_finger_print">LOGIN WITH FINGER PRINT</string>
    <string name="login_with_face_id">LOGIN WITH FACE ID</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="sign_out">Sign out</string>
    <string name="forgot_text">Lorem ipsum dolor sit amet, porttitor. Nulla blandit arcu vel neque tempor, ut luctus lectus egestas. Phasellus rhoncus elementum urna sed fermentum.</string>
    <string name="your_email">Your email</string>
    <string name="your_id_number">Your ID number</string>
    <string name="suggestion_yourname_gmail_com">Suggestion : yourname@gmail.com</string>
    <string name="sent">SENT</string>
    <string name="step1">Praesent egestas ac elit vitae tristique. Aliquot incident torpor leo, vel consequent mauris placerat at. Sed at ante a est tincidunt convallis eget a elit</string>
    <string name="step2">Vivamus tempor nulla pharetra orci mattes premium. Curator sed arc eu mass mollies hindered imperiled poser metas.</string>
    <string name="step3">Pellentesque tempor sceneries vehicular. Crass in lectures id marries gravid sagittal  fells.</string>
    <string name="instruction3step">Please perform the following 3 steps to retrieve your password :</string>
    <string name="sure">sure</string>
    <string name="main_screen">Main Screen</string>
    <string-array name="banks">
        <item>ABA</item>
        <item>ACLEDA</item>
        <item>Canadia</item>
        <item>Wing</item>
        <item>AMK</item>
        <item>Amret</item>

    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="wallet">Wallet</string>
    <string name="home">Home</string>
    <string name="shopping">Shopping</string>
    <string name="please_enter_your_id_number_and_email_to_verify_your_password">Please enter your ID number and email to verify your password</string>
</resources>
