<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/app_background"
    tools:context=".views.WelcomeActivity">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <TextView
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"/>
        <TextView
            android:id="@+id/first_name_show"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alex"
            android:gravity="center"/>
        <TextView
            android:id="@+id/phone_show"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="(1234567890)"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/welcome_password"
            android:maxLength="6"
            android:inputType="text"
            android:gravity="center"
            android:hint="@string/enter_your_password"
            android:background="@drawable/otp_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </LinearLayout>


    <Button
        android:enabled="false"
        android:id="@+id/btn_login"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_style"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_login_finger"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_style"
        android:text="@string/login_with_finger_print" />

    <Button
        android:id="@+id/btn_login_face_id"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_style"
        android:text="@string/login_with_face_id" />

    <TextView
        android:id="@+id/tv_forgot_pwd"
        android:textColor="@color/blue"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"/>
    <TextView
        android:textColorLink="@color/blue"
        android:id="@+id/tv_sign_out"
        android:textColor="@color/blue"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"/>

</LinearLayout>