<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/app_background"
    tools:context=".views.PersonalInfoActivity">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <TextView
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_info"/>
        <TextView
            android:padding="20dp"
            android:textSize="15sp"
            android:textColor="@color/default_slet"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/tv_first_name"
            android:inputType="text"
            android:gravity="center"
            android:hint="@string/first_name"
            android:background="@drawable/otp_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <EditText
            android:id="@+id/tv_last_name"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/last_name"
            android:background="@drawable/otp_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </LinearLayout>


    <Button
        android:enabled="false"
        android:id="@+id/btn_enter_username"
        android:layout_marginTop="40dp"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_style"
        android:text="@string/enter" />


</LinearLayout>