<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="22dp"
    android:background="@drawable/ic_bg_white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.NewPhoneNumberActivity">

    <LinearLayout
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <TextView
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"/>
        <TextView
            android:padding="22dp"
            android:textSize="15sp"
            android:textColor="@color/default_slet"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <EditText
            android:maxLength="10"
            android:drawableStart="@drawable/ic_baseline_call_24"
            android:layout_marginTop="10dp"
            android:hint="@string/input"
            android:background="@drawable/otp_style"
            android:id="@+id/input_new_phone_number"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="phone" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btn_next_new_phone"
        android:enabled="false"
        android:layout_marginTop="30dp"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:background="@drawable/button_style"
        android:text="@string/next" />

</LinearLayout>

