<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".views.ForgotPasswordActivity">
    <include layout="@layout/action_bar" />
    <LinearLayout
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_enter_your_id_number_and_email_to_verify_your_password"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="80dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:elevation="10dp"
            android:maxLength="4"
            android:id="@+id/id_number"
            android:inputType="number"
            android:gravity="center"
            android:hint="@string/your_id_number"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <EditText
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:elevation="10dp"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:hint="@string/your_email"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </LinearLayout>
    <TextView

        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestion_yourname_gmail_com"/>
    <Button
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:enabled="false"
        android:id="@+id/btn_sent"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="end"
        android:background="@drawable/button_style"
        android:text="@string/sent" />

</LinearLayout>