<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="22dp"
    android:background="@drawable/ic_bg_white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignUpActivity">

    <LinearLayout
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <TextView
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"/>
        <TextView
            android:padding="22dp"
            android:textSize="15sp"
            android:textColor="@color/default_slet"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <EditText
            android:maxLength="10"
            android:drawableStart="@drawable/ic_baseline_call_24"
            android:layout_marginTop="10dp"
            android:hint="@string/input"
            android:background="@drawable/otp_style"
            android:id="@+id/input_phone_number"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="phone" >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_weight="1"
            android:id="@+id/agree_select"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:buttonTint="#8C8A8A"
            android:textColor="@color/default_slet"
            android:textSize="14sp"
            android:text="" />
        <TextView
            android:textColorLink="@color/blue"
            android:id="@+id/tv_term_condition"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/term_condition"/>
        <View
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="50dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:enabled="false"
        android:layout_marginTop="10dp"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:background="@drawable/button_style"
        android:text="@string/next" />

</LinearLayout>

