<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg"
    tools:context=".views.PasswordActivity">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <TextView
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_password"/>
        <TextView
            android:padding="20dp"
            android:textSize="15sp"
            android:textColor="@color/default_slet"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Your password must be 6 digits.
                                Please fill it"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:elevation="10dp"
            android:maxLength="6"
            android:id="@+id/enter_password"
            android:inputType="textPassword"
            android:gravity="center"
            android:hint="@string/input_your_password"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <EditText
            android:background="@drawable/edit_text_border"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:elevation="10dp"
            android:maxLength="6"
            android:id="@+id/re_enter_password"
            android:inputType="textPassword"
            android:gravity="center"
            android:hint="@string/input_re_enter_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_incorrect_password"
        android:visibility="invisible"
        android:textSize="13sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/incorrect_password"/>
    <Button
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:id="@+id/btn_enter_password"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_gravity="end"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_style"
        android:text="@string/enter" />


</LinearLayout>