<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/black"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/your_choice"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/finger" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/time_alert"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="155dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/sub_call"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="220dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/button_style"
            android:gravity="center"
            android:text="@string/cancel" />

    </androidx.cardview.widget.CardView>


</RelativeLayout>