<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/app_background"
    tools:context=".views.VerifyActivity">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <TextView
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/v_title"/>
        <TextView
            android:padding="20dp"
            android:textSize="15sp"
            android:textColor="@color/default_slet"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal">
        <EditText
            android:maxLength="1"
            android:id="@+id/first_otp"
            android:textAlignment="center"
            android:layout_marginTop="9dp"
            android:background="@drawable/otp_style"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:hint="."/>
        <EditText
            android:maxLength="1"
            android:id="@+id/second_otp"
            android:textAlignment="center"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="7dp"
            android:background="@drawable/otp_style"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:hint="."/>
        <EditText
            android:maxLength="1"
            android:id="@+id/third_otp"
            android:textAlignment="center"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="7dp"
            android:background="@drawable/otp_style"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:hint="."/>
        <EditText
            android:maxLength="1"
            android:id="@+id/four_otp"
            android:textAlignment="center"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="7dp"
            android:background="@drawable/otp_style"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:hint="."/>
        <EditText
            android:maxLength="1"
            android:id="@+id/five_otp"
            android:textAlignment="center"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="7dp"
            android:background="@drawable/otp_style"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:hint="."/>
        <EditText
            android:maxLength="1"
            android:id="@+id/six_otp"
            android:textAlignment="center"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="7dp"
            android:background="@drawable/otp_style"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:hint="."/>

    </LinearLayout>

    <Button
        android:enabled="false"
        android:id="@+id/btn_verify_otp"
        android:layout_marginTop="20dp"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_style"
        android:text="@string/next" />
    <TextView

        android:id="@+id/time_limit"
        android:textColor="@color/blue_sky"
        android:text="@string/limit_time_text"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/canadia_link"
        android:text="@string/chnage_phone_text"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorLink="@color/blue"
        />
    <TextView
        android:id="@+id/success_show"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_marginTop="230dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0AC398 "
        android:text="@string/success"/>
</LinearLayout>