<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/time_alert"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:background="@drawable/button_style"
                android:gravity="center"
                android:text="@string/cancel" />

            <View
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <Button

                android:id="@+id/btn_yes"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:background="@drawable/button_style"
                android:gravity="center"
                android:text="@string/yes" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>